1. order status icon z-index issue fixed, 2. order processing and order processed label correction done, 3. inside navbar links color to white, 4. inside product add page admin side while adding product makin image to proper showcase in that frame and 5. aligned the thank you text properly at center.

--- a/styles/products_manager.css
+++ b/styles/products_manager.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     display: block;
-    object-fit: cover;
+    /* object-fit: cover; */
 }
 .img-up .file_img span{
     position: absolute;
